[package]
name = "voltlane-client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.2", features = ["net"] }
net = { git = "https://github.com/voltlane/common" }
enc = { git = "https://github.com/voltlane/common" }
anyhow = "1.0.98"
tokio-util = { version = "0.7.14", features = ["codec"] }
