[package]
name = "voltlane-client"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Voltlane client-side helper library"
repository = "https://github.com/voltlane/client-rs"

[dependencies]
tokio = { version = "1.44.2", features = ["net"] }
voltlane-net = "0.1.0"
voltlane-enc = "0.1.0"
anyhow = "1.0.98"
tokio-util = { version = "0.7.14", features = ["codec"] }
